<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~  This file is part of Akvo Caddisfly
  ~
  ~  Akvo Caddisfly is free software: you can redistribute it and modify it under the terms of
  ~  the GNU Affero General Public License (AGPL) as published by the Free Software Foundation,
  ~  either version 3 of the License or any later version.
  ~
  ~  Akvo Caddisfly is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~  without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~  See the GNU Affero General Public License included below for more details.
  ~
  ~  The full license text can also be seen at <http://www.gnu.org/licenses/agpl.html>.
  -->
<ViewAnimator xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewAnimator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.akvo.caddisfly.sensor.colorimetry.liquid.ColorimetryLiquidActivity">

    <LinearLayout
        android:id="@+id/layoutDilutions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textAllCaps="false"
            android:textSize="32sp"
            android:textStyle="normal"
            android:visibility="visible"
            tools:text="Contaminant" />

        <Button
            android:id="@+id/buttonNoDilution"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/green_button"
            android:minHeight="80dp"
            android:minWidth="300dp"
            android:paddingBottom="30dp"
            android:paddingTop="30dp"
            android:text="@string/noDilution"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/buttonDilution1"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/green_button"
            android:minHeight="80dp"
            android:minWidth="300dp"
            android:paddingBottom="30dp"
            android:paddingTop="30dp"
            android:textAllCaps="true"
            tools:text="@string/timesDilution" />

        <Button
            android:id="@+id/buttonDilution2"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/green_button"
            android:minHeight="80dp"
            android:minWidth="300dp"
            android:paddingBottom="30dp"
            android:paddingTop="30dp"
            android:textAllCaps="true"
            tools:text="@string/timesDilution" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutInstructions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/textTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textAllCaps="false"
            android:textSize="32sp"
            android:textStyle="normal"
            android:visibility="visible"
            tools:text="Contaminant" />

        <TextView
            android:id="@+id/ppmTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="normal"
            android:visibility="visible"
            tools:text="0.00 ppm" />

        <TextView
            android:id="@+id/textDilution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/amber"
            android:gravity="center"
            android:padding="7dp"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="70dp">

            <Button
                android:id="@+id/buttonStart"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_orange"
                android:text="@string/start"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutWait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/textTitle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textAllCaps="false"
            android:textSize="32sp"
            android:textStyle="normal"
            android:visibility="visible"
            tools:text="Contaminant" />

        <TextView
            android:id="@+id/textDilution2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/amber"
            android:gravity="center"
            android:padding="7dp"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/placeDeviceInStand"
                android:textSize="22sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@null"
                android:src="@drawable/minute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/waitTillCameraSound"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>
</ViewAnimator>
