...
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:alpha="0.5"
            android:background="#dd746e64" />

        <TextView
            android:id="@+id/textVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
...
